# various_tools

./: .gitignore  .pre-commit-config.yaml  .pypirc  LICENSE  README.md  project.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
scripts/: main.py  visualization_3d_dynamical_system.py  visualize_dynamical_system.py
src/various_tools/: linalg.py
src/vartools/: angle_math.py  animator.py  directional_space.py  linalg.py  math.py  state.py  states.py
src/vartools/directional_space/: __init__.py  directional_space.py  unit_direction.py  visualization.py
src/vartools/dynamical_systems/: __init__.py  _base.py  circle_stable.py  circular_and_linear.py  linear.py  locally_rotated.py  model_dynamics.py  multiattractor_dynamics.py  plot_vectorfield.py  quadratic_axis_convergence.py  spiral_motion.py  velocity_trimmer.py
src/vartools/dynamicalsys/: __init__.py  _base.py  circle_stable.py  closedform.py  linear.py  locally_rotated.py  model_dynamics.py  plot_vectorfield.py  quadratic_axis_convergence.py  spiral_motion.py
tests/: __init__.py  test_angle_math.py  test_animator.py  test_cache_numpy.py  test_cached_property.py  test_circular_dynamics.py  test_directional_space.py  test_directional_weighted_sum.py  test_dynamcis.py  test_dynamical_systems.py  test_linear_dynamics.py  test_locally_rotated.py  test_math_derivatives.py  test_pose_state.py  test_rotation_between_vectors.py  test_sinus_system.py  test_spiral_dynamical_system.py  test_states.py  visual_test_dynamical_systems.py
vartools/: angle_math.py  animator.py  base_states.py  colors.py  filter.py  gmr.py  handwritting_handler.py  linalg.py  math.py  mouse_recorder.py  screen_recorder.py  states.py  visualization.py
vartools/directional_space/: __init__.py  addition.py  directional_space.py  unit_direction.py  visualization.py
vartools/dynamical_systems/: __init__.py  _base.py  circle_stable.py  circular_and_linear.py  closedform.py  globally_rotated.py  linear.py  locally_rotated.py  multiattractor_dynamics.py  plot_vectorfield.py  quadratic_axis_convergence.py  sinus_attractor.py  spiral_motion.py  velocity_trimmer.py
vartools/dynamics/: __init__.py  wavy_rotated_dynamics.py
vartools/vector_rotation/: __init__.py  single_rotation.py
