[metadata]
name = "various_tools",
description = "Various Mathematical Tools For Programming",
author = "Lukas Huber",
license = "MIT",
license_file = LICENSE,
install_requires=requirements,
tests_require=requirements_dev,
extras_require={"test": dev_requirements},
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
test_suite="tests",

[options]
python_requires = >=3.6
package_dir =
	=src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    # tox>=3.24

[options.package_data]
slapping = py.typed

[flake8]
max-line-length = 160
