[metadata]
name = vartools
description = Algorithm to Dynamically Avoid Obstacles
long_description = file: README.md
author = Lukas Huber
license = BSD license
# license_file = LICENSE
# nstall_requires=requirements
# tests_require=requirements_dev,
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    vartools
python_requires = >=3.6
package_dir =
    =src
    # = src/robot_avoidance
    # = src/comparison
# zip_safe = no

# [options.packages.find]
# where = src
# where =
    # src/robot_avoidance
    # src/comparison

# [options.extras_require]
# testing =
    # pytest>=6.0
    # pytest-cov>=2.0
    # mypy>=0.910
    # flake8>=3.9
    # tox>=3.24

# o[ptions.package_data]
# dynamic_obstacle_avoidance = py.typed

[flake8]
max-line-length = 160

